# Maintenance_prediction_mining

./: .gitignore  README.md  pyproject.toml
EDAs/: EDA_maquina_bolas.qmd  README.md  utils.py
data/: RUTAS.md  diccionario_molinos_detalle.html  diccionario_molinos_detalle.qmd
generacion_data/: generar_datos_sinteticos_chancadoras_2anios.py  maquina_bolas_data_generator.py  maquina_bolas_data_quick_val.py
